修改jvm启动参数，删除PrintGCDateStamps参数；修改启动类，日志打印位置错误